hphp/test/slow/class-ptr/hsl.php.expectf
Fatal error: Uncaught exception 'HH\Lib\OS\NotFoundException' with message 'ENOENT(2): Errno 2: No such file or directory' in %s/class-ptr/hsl.php:6
Stack trace:
#0 (): Closure$HH\Lib\_Private\_OS\get_throw_errno_impl#2()
#1 (): Closure$HH\Lib\_Private\_OS\get_throw_errno_impl#4()
#2 (): HH\Lib\_Private\_OS\throw_errno()
#3 (): HH\Lib\_Private\_OS\wrap_impl()
#4 %s/class-ptr/hsl.php(6): HH\Lib\OS\mkdtemp()
#5 (): main()
#6 {main}
